Master4429 Mod Files/MinecraftForgeGradle/.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-27b9d44        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\RegistryHandler.java:3: error: cannot find symbol
import com.hassam.mythocraft.init.ItemsInit;
                                 ^
  symbol:   class ItemsInit
  location: package com.hassam.mythocraft.init
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\RegistryHandler.java:4: error: cannot find symbol
import com.hassam.mythocraft.init.BlocksInit;
                                 ^
  symbol:   class BlocksInit
  location: package com.hassam.mythocraft.init
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\RenderHandler.java:7: error: package com.hassam.mythocraft.render does not exist
import com.hassam.mythocraft.render.RenderCentaur;
                                   ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\TileEntityHandler.java:5: error: package com.hassam.mythocraft.objects.blocks.machines.sinterer does not exist
import com.hassam.mythocraft.objects.blocks.machines.sinterer.TileEntitySinteringFurnace;
                                                             ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:26: error: cannot find symbol
    @SidedProxy(clientSide = Reference.CLIENT, serverSide = Reference.COMMON)
                                      ^
  symbol:   variable CLIENT
  location: class Reference
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:26: error: cannot find symbol
    @SidedProxy(clientSide = Reference.CLIENT, serverSide = Reference.COMMON)
                                                                     ^
  symbol:   variable COMMON
  location: class Reference
6 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 10.91 secs
